--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
@@ -16,9 +17,9 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.4.1",
-    "socket.io": "^4.7.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@prisma/client": "^5.4.1",
@@ -28,6 +29,6 @@
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.3",
-    "@types/socket.io": "^3.0.2"
+    "@types/ws": "^8.5.10"
   }
 }
